<resources>
    <string name="app_name">Note App</string>
    <string name="notepad">Notepad</string>
    <string name="sort">Sort</string>
    <string name="floattingButton">FloatButton</string>
    <string name="save">Save</string>
    <string name="undo">UNDO</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_text">Enter text</string>
    <string name="title">Title</string>
    <string name="last_edited">Last Edited:</string>
    <string name="sort_by">Sort By</string>
    <string name="edit_date_from_newest">edit date: from newest</string>
    <string name="edit_date_from_oldest">edit date: from oldest</string>
    <string name="title_a_to_z">title: A to Z</string>
    <string name="title_z_to_a">title: Z to A</string>
    <string name="creation_date_from_newest">creation date: from newest</string>
    <string name="creation_date_from_oldest">creation date: from oldest</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="categorize">Categorize</string>
    <string name="colorize">Colorize</string>
    <string name="show_info">Show Info</string>
    <string name="words">Words:</string>
    <string name="characters">Characters:</string>
    <string name="characters_without_whitespaces">Characters without whitespaces :</string>
    <string name="created_at">Created at:</string>
    <string name="last_saved_at">Last saved at:</string>
    <string name="line_count">Line Count:</string>
    <string name="ok">OK</string>
    <string name="select_color">Select Color</string>
    <string name="set_color">Set Color</string>
    <string name="remove_color">Remove Color</string>
    <string name="undo_all">Undo all</string>
    <string name="export_to_a_text_file">Export to a text file</string>
    <string name="import_text_files">Import text files</string>
    <string name="export_all_notes_to_text_files">Export all notes to text files</string>
    <string name="select_all_notes">Select All Notes</string>
    <string name="categories">Categories</string>
    <string name="new_category_name">New category name</string>
    <string name="add">ADD</string>
    <string name="edit_category_name">Edit category name</string>
    <string name="select_category">Select category</string>
    <string name="switch_to_read_mode">Switch to read mode</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="boldbutton">boldButton</string>
    <string name="italic">italicButton\n</string>
    <string name="underline">underlineButton\n</string>
    <string name="strikethrough">strikethought</string>
    <string name="color">format_color</string>
    <string name="font_size">textSizeButton\n</string>
    <string name="clear_formatting">clear\n</string>
    <string name="open_formatting_bar">Open Formatting Bar</string>
    <string name="text_size">Text size</string>
    <string name="set_default_18">SET DEFAULT (18)</string>
    <string name="opacity">Opacity</string>
    <string name="undelete_all">Undelete All</string>
    <string name="empty_trash">Empty trash</string>
    <string name="select_an_action_for_the_note">Select an action for the note</string>
    <string name="undelete">Undelete</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="changes_color_theme_of_visible_elements">Changes color theme of visible elements</string>
    <string name="password_settings">Password settings</string>
    <string name="note_list">Note list</string>
    <string name="note_editing">Note editing</string>
    <string name="move_deleted_notes_to_trash">Move deleted notes to \'Trash\'</string>
    <string name="deleted_notes_will_be_stored_in_the_trash_folder">Deleted notes will be stored in the \'Trash\' folder</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="confirm">Confirm</string>
    <string name="message_for_changes_note">Remove all the note changes made since the last opening of the note ?</string>
    <string name="tap_twice_to_edit">Tap Twice To Edit</string>
    <string name="Untitled">Untitled</string>
    <string name="text_size_18">Text Size 18</string>
    <string name="share_note">Share With</string>
    <string name="updated_categorize">Updated Categorize</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="want_to_remove">Do you want to remove</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="edit_categorized">Edit categories</string>
    <string name="new_date_edited">NewestDateEdited</string>
    <string name="old_date_edited">OldestDateEdited</string>
    <string name="a_z">A->Z</string>
    <string name="z_a">Z->A</string>
    <string name="new_date_created">NewestDateCreated</string>
    <string name="old_date_created">OldestDateCreated</string>
    <string name="message_confirm_remove_notes">Do you want to remove this selected notes ?</string>
    <string name="notes">notes</string>
    <string name="file_has_imported">file has imported !</string>
    <string name="title_confirm_remove_note">Do you want to remove this selected notes? Notes from the category won\'t be deleted ?</string>
    <string name="title_confirm_remove_trash">All trashed notes will be deleted permanently. Are you sure that you want to delete all of the trashed note ?</string>
    <string name="delete_successfully">Delete Successfully</string>
    <string name="title_confirm_restore_note">Do you want to restore this selected notes ?</string>
    <string name="restore_one_note">Restore 1 note</string>
    <string name="all">All</string>
    <string name="category">category</string>
    <string name="errorCreatingDocument">Error creating document</string>
    <string name="errorOpeningStream">Error opening output stream</string>
    <string name="error_loading">Error reading file</string>
    <string name="error_saving">Error when saving file</string>
</resources>