<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/action_Categories"
        android:title="@string/categorize" />
    <item
        android:id="@+id/action_colorize"
        android:title="@string/colorize" />
    <item
        android:id="@+id/show_info"
        android:title="@string/show_info" />
    <item android:id="@+id/search_menu"
        android:title="@string/search"/>
    <item android:id="@+id/share_menu"
        android:title="@string/share"/>
    <item
        android:id="@+id/switchToReadMode"
        android:title="@string/switch_to_read_mode"/>
    <item
        android:id="@+id/open_formatting_bar"
        android:title="@string/open_formatting_bar"/>
    <item android:id="@+id/undoAll"
        android:title="@string/undo_all"/>
    <item android:id="@+id/exportTxtFiles"
        android:title="@string/export_to_a_text_file"/>
</menu>