<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="18sp"
    android:text="@string/sort_by"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_15sdp"
    />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <RadioButton
            android:id="@+id/rb_edit_date_newest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_date_from_newest" />

        <RadioButton
            android:id="@+id/rb_edit_date_oldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_date_from_oldest" />

        <RadioButton
            android:id="@+id/rb_title_AtoZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_a_to_z" />

        <RadioButton
            android:id="@+id/rb_title_ZtoA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_z_to_a" />
        <RadioButton
            android:id="@+id/rb_fromNewestDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_date_from_newest" />

        <RadioButton
            android:id="@+id/rb_fromOldestDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_date_from_oldest" />
    </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:gravity="end"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_background"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/cancel"
        />
    <TextView
        android:id="@+id/btnSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_background"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/sort"
        android:layout_marginStart="@dimen/_20sdp"/>
</LinearLayout>
</LinearLayout>