<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/words"
        android:textColor="@color/black"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/lineCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/line_count"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/characters"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/characters_without_whiteSpaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/characters_without_whitespaces"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/created_at"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/LastSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/last_saved_at"
        android:textColor="@color/black"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnOk"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="end"
        android:background="@null"
        android:text="@string/ok"
        android:textSize="16sp"
        android:textColor="@color/theme_background"/>
</LinearLayout>