<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="18sp"
        android:text="@string/text_size"
        />
    <View
        android:layout_width="@dimen/_250sdp"
        android:layout_height="1dp"
        android:background="@color/theme_background"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="18sp"
        android:text="@string/select_an_action_for_the_note"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/UndeleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/undelete"/>
        <RadioButton
            android:id="@+id/DeleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/delete"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@null"
            android:layout_marginEnd="@dimen/_55sdp"
            android:textColor="@color/theme_background"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btnOk"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@null"
            android:layout_marginStart="@dimen/_50sdp"
            android:textColor="@color/theme_background"
            android:text="@string/ok"/>
    </RelativeLayout>
</LinearLayout>
