<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorItem">
    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/theme_background"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backFromSetting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/baseline_arrow_back_24"
            android:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/txtTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/changes_color_theme_of_visible_elements"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="16sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/password_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/password_settings"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_25sdp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/noteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/note_list"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/noteEditing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/note_editing"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="18sp" />
    <LinearLayout
        android:id="@+id/moved_To_Trash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/move_deleted_notes_to_trash"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/deleted_notes_will_be_stored_in_the_trash_folder"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="16sp" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchButton"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/privacySetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/privacy_settings"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="18sp" />
</LinearLayout>