<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">
<TextView
    android:id="@+id/txtSelectColor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/select_color"
    android:textSize="16sp"
    android:layout_marginTop="15dp"
    android:fontFamily="sans-serif-condensed-medium"
    android:background="@color/white"
    android:textColor="@color/black"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPickColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"/>
    <Button
        android:id="@+id/btnRemoveColor"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="8dp"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/remove_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/theme_background"/>
        <Button
            android:id="@+id/btnOk"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@null"
            android:text="@string/ok"
            android:textColor="@color/theme_background"/>
    </LinearLayout>
</LinearLayout>