<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/edit_category_name"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTxtCategory"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_background"
        android:singleLine="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@null"
            android:textColor="@color/theme_background"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btnOk"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@null"
            android:textColor="@color/theme_background"
            android:text="@string/ok"/>
    </LinearLayout>
</LinearLayout>